--- a/sacos-cycling-fe/assets/css/base.css
+++ b/sacos-cycling-fe/assets/css/base.css
@@ -1,14 +1,17 @@
-#_nuxt {
+#__nuxt {
     background: #00000F;
-}
-
-.container {
     margin: 0 auto;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+#__layout {
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .title {
@@ -57,9 +60,11 @@
     bottom: 0;
     position: absolute;
     margin: 0 auto;
-    width: auto;
+    width: 100% !important;
     text-align: center;
     padding: 1em;
+    color: #fff !important;
+    background-color: #000 !important;
 }
 
 a {
