--- a/sacos-cycling-fe/assets/css/base.css
+++ b/sacos-cycling-fe/assets/css/base.css
@@ -75,8 +75,8 @@ a:hover {
     color: #000;
 }
 
-.half-width {
-    width: 50%;
+.three-quater-width {
+    width: 75%;
     display: block;
     margin: 0 auto;
     padding: 2em;
@@ -101,13 +101,4 @@ a:hover {
 
 .home-logo {
     background: #e3b602;
-}
-
-.container {
-    padding-top: 5em;
-}
-
-.navbar.is-fixed-bottom {
-    height: 2em;
-    min-height: 2em;
 }
