--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -4,17 +4,17 @@
     background-color: #e3b602;
 }
 
-#news .notification {
+#home .notification {
     padding: 1.25rem 1.5rem 1.25rem 1.5rem;
 }
 
-#news .notification .image img {
+#home .notification .image img {
     max-height: 250px;
     width: auto;
     margin: auto;
 }
 
-#news .notification p {
+#home .notification p {
     padding-top: 1em;
     font-size: 1em;
 }
