https://trello.com/c/R8O2Rw1y added slider to home page

--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -1,5 +1,4 @@
 /* overriding bulma CSS */
-
 .notification.is-info {
     background-color: #e3b602;
 }
@@ -27,6 +26,7 @@
 	margin: 0 auto;
 }
 
+/*vuperslides override*/
 .vueperslides__bullets--outside .vueperslides__bullet .default {
     border-color: #000;
     -webkit-box-shadow: none;
@@ -43,4 +43,119 @@
 
 .vueperslide__image {
 	background-position: top;
+}
+
+.vueperslide__content-wrapper:not(.vueperslide__content-wrapper--outside-top):not(.vueperslide__content-wrapper--outside-bottom) {
+    background:  #e3b602;
+    position: absolute !important;
+    display: block !important;
+    font-size: .75em;
+    width: 100%;
+}
+
+.vueperslide__content-wrapper:not(.vueperslide__content-wrapper--outside-top):not(.vueperslide__content-wrapper--outside-bottom) {
+    height: auto !important;
+    bottom: 0px !important;
+}
+
+.vueperslide, .vueperslide__image {
+    background-size: auto 200px !important;
+    background-repeat: no-repeat;
+}
+
+.vueperslide__content {
+    overflow: hidden;
+    height: 2em;
+    width: 80%;
+    line-height: 1.75em;
+    margin: auto;
+}
+
+.vueperslide__content-wrapper.closed .vueperslide__content {
+    height: 2em;
+}
+
+.vueperslide__content-wrapper.open .vueperslide__content {
+    height: 100%;
+    min-height: 12em;
+}
+
+.vueperslide.show-more .vueperslide__content:hover {
+    cursor:pointer;
+}
+
+.vueperslide.show-more .vueperslide__content-wrapper .vueperslide__content:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 0.75em;
+    width: 10px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #fff;
+    right: 1.5em;
+    top: 0.75em;
+}
+
+.vueperslide.show-more .vueperslide__content-wrapper.open .vueperslide__content:after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    font-size: 0.75em;
+    width: 10px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #000;
+    border-top: 0px solid #fff;
+    right: 1.5em;
+    top: 90%;
+}
+
+.vueperslides__parallax-wrapper {
+    min-height: 300px;
+    border-radius: 5px;
+}
+
+.vueperslide__content-wrapper {
+    padding: 0 0.5em 0 0.5em;
+}
+
+.vueperslides__bullet .default {
+    width: 30px !important;
+    height: 5px !important;
+    border-radius: 2px !important;
+}
+
+.vueperslides__bullet--active .default {
+    border-width: 0px !important;
+}
+
+.vueperslides__arrow svg {
+    width: 2.75em !important; 
+}
+
+/* On screens that are 768px or less, set the background color to blue */
+@media screen and (max-width: 768px) {
+    .vueperslides__bullets {
+        top: 20em;
+    }
+
+    #heading h1 {
+        font-size: 4em;
+    }
+
+    .section {
+        padding: 1rem 1.5rem;
+    }
+
+    .vueperslides__arrow svg {
+        background: #fff;
+        color: #000;
+    }
 }
